# Dobrika-Search

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  buf.yaml  docker-compose.yml  docker-run.sh
.github/workflows/: ci.yml  deploy.yaml  tests.yml
deployments/k8s/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
dev/: INDEX.md  conftest.py  load_test.py  pytest.ini  requirements.txt  test_performance.py  test_quality.py
dev/data/: bullets.json
monitoring/: docker-compose.yml  prometheus.yml
src/: static.hpp
src/proto/: DSRequest.proto  DSResponse.proto
src/server/: main.cpp  web_server.cpp  web_server.hpp
src/tools/: config_generator.cpp  config_generator.hpp  dse_tools.cpp  dse_tools.hpp
src/xapian_processor/: xapian_processor.cpp  xapian_processor.hpp
tests/: test_backup.cpp  test_http_server.cpp  test_xapian_layer.cpp
